--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,7 +14,9 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-
-
+        <Label x:Name="label" Content="Total Charge after adding &#xA;the delivery charge ($25) " HorizontalAlignment="Left" Margin="10,195,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="totalChargeTextBlock" HorizontalAlignment="Left" Margin="184,209,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="28" Width="70"/>
+        <Label x:Name="label1" Content="Total Charge after adding &#xA;the wrap charge ($5)" HorizontalAlignment="Left" Margin="10,237,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="totalWrapChargeTextBlock" HorizontalAlignment="Left" Margin="184,251,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="20" Width="70"/>
     </Grid>
 </Window>
